package orchestrator.handler.calendar.model;

import lombok.Data;
import orchestrator.handler.HandlerResponse;

@Data
public class CalendarHandlerResponse extends HandlerResponse {

    private String text;

}
