package orchestrator.handler.calendar.model;

import lombok.Data;

@Data
public class Client {

    int UserId;
    String Name;
    String Email;
    String Phone;
    String Country;
    String Role;

}
