@startuml

title __MODEL's Class Diagram__\n

  namespace orchestrator {
    namespace handler {
      namespace calendar {
        namespace model {
          class orchestrator.handler.calendar.model.CalendarHandlerRequest {
              - Flow : String
              + CalendarHandlerRequest()
              + equals()
              + getClient()
              + getFlow()
              + getService()
              + hashCode()
              + setClient()
              + setFlow()
              + setService()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace orchestrator {
    namespace handler {
      namespace calendar {
        namespace model {
          class orchestrator.handler.calendar.model.CalendarHandlerResponse {
              - text : String
              + CalendarHandlerResponse()
              + equals()
              + getText()
              + hashCode()
              + setText()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace orchestrator {
    namespace handler {
      namespace calendar {
        namespace model {
          class orchestrator.handler.calendar.model.Client {
              ~ Country : String
              ~ Email : String
              ~ Name : String
              ~ Phone : String
              ~ Role : String
              ~ UserId : int
              + Client()
              + equals()
              + getCountry()
              + getEmail()
              + getName()
              + getPhone()
              + getRole()
              + getUserId()
              + hashCode()
              + setCountry()
              + setEmail()
              + setName()
              + setPhone()
              + setRole()
              + setUserId()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  orchestrator.handler.calendar.model.CalendarHandlerRequest -up-|> orchestrator.handler.HandlerRequest
  orchestrator.handler.calendar.model.CalendarHandlerRequest o-- orchestrator.handler.calendar.model.Client : Client
  orchestrator.handler.calendar.model.CalendarHandlerRequest o-- orchestrator.model.Service : Service
  orchestrator.handler.calendar.model.CalendarHandlerResponse -up-|> orchestrator.handler.HandlerResponse


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
